fixed bugs and messages

--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -287,7 +287,7 @@ html
           //- Phone verification after register [BLACK]
           div.content-data(style="color: black")
             div Description ==> Phone verification after register
-            div Request URI ==> URI/verifyPhone
+            div Request URI ==> URI/verify_phone
             div Request Method ==> 
               span(style="color: black") [POST] 
 
