--- a/views/helpHome.pug
+++ b/views/helpHome.pug
@@ -59,3 +59,6 @@ html
             form(action="/help/requestsInfo/all" method="get")
               button(type="submit") API Requests Info
 
+            form(action="/app-docs" method="get")
+              button(type="submit") Swagger
+
