--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -288,7 +288,7 @@ html
             div &emsp;&emsp;Searching with job category: caties=petWalking,cleaning,repairing
             div &emsp;&emsp;Searching with job startDate: date[gte]=2022-10-25&date[lte]=2023-07-16
             div &emsp;&emsp;Searching with job duration (must be number from '1' to '6' OR '0'. '0' indicates all.): dur=1,3
-            div &emsp;&emsp;Pagination and limit: page=1&limit=15
+            div &emsp;&emsp;Pagination (offset) and limit (default: 20, max: 100): offset=20&limit=15
             div }
 
             div Request Method ==> 
@@ -302,7 +302,7 @@ html
             div(style="color: black")
               div Request Example ==> in postman you can use PARAMS section (below request method)
             
-              div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?page=1&limit=3&salcost[gte]=10000&salcost[lte]=40000
+              div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?offset=20&limit=3&salcost[gte]=10000&salcost[lte]=40000
 
               div &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;==> URI/jobs?caties=petWalking&date[gte]=2022-10-25&date[lte]=2023-07-16
 
