Added job description

--- a/views/requestsInfo.pug
+++ b/views/requestsInfo.pug
@@ -249,6 +249,7 @@ html
             div &emsp;&emsp;"duration": 2 , // indicates the job duration in hour
             div &emsp;&emsp;"salary": 19600
             div &emsp;&emsp;"address": "something" , // [?]
+            div &emsp;&emsp;"description": "Hi from arpify" ,
             div &emsp;&emsp;"category": "petWalking" ,
             div &emsp;&emsp;"subCategories": ["subCat1", "subCat2"] // [?]
             div }
@@ -270,6 +271,7 @@ html
             div &emsp;&emsp;"duration": 2 , // indicates the job duration in hour
             div &emsp;&emsp;"salary": 15600
             div &emsp;&emsp;"address": "something" , // [?]
+            div &emsp;&emsp;"description": "Hi from arpify" ,
             div &emsp;&emsp;"category": "petWalking" ,
             div &emsp;&emsp;"subCategories": ["subCat1", "subCat2"] // [?]
             div }
@@ -370,6 +372,14 @@ html
             div Request Headers ==> {
             div &emsp;&emsp;"Authorization": "Bearer accessToken" , 
             div }
+
+
+
+
+
+
+
+
 
 
         //- Mamikon ==================================================
