--- a/views/helpHome.pug
+++ b/views/helpHome.pug
@@ -35,7 +35,7 @@ html
             br
             hr
             div.uris-data-left Front-end URI
-            input(type="text" value="http://motaka.xyz/" id="frontUri" disabled)
+            input(type="text" value="http://motaka-application.herokuapp.com/" id="frontUri" disabled)
             script.
               function copyFrontUrl() {
                 let copyText = document.getElementById("frontUri")
@@ -48,6 +48,12 @@ html
               button(onclick="copyFrontUrl()" title="Front-end").copy-btn Copy URI
             //- ============================ Front-end finish ============================
             
+
+
+
+
+
+
         //- Content HelperRoutes ========================================================
         div.content-buttons
           h4.content-buttons-header Available Helper Routes
