--- a/views/helpHome.pug
+++ b/views/helpHome.pug
@@ -18,7 +18,7 @@ html
           div.content-uris-data
             //- ============================ Back-end ============================
             div.uris-data-left  Back-end URI&nbsp;
-            input(type="text" value="https://motaka.herokuapp.com/" id="backUri" disabled)
+            input(type="text" value="https://motaka-api.herokuapp.com/" id="backUri" disabled)
             script.
               function copyBackUrl() {
                 let copyText = document.getElementById("backUri")
